Fixes profile avatar alignment

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -11,3 +11,16 @@
   margin-bottom: 128px;
 }
 
+.tab-pane {
+  padding-top: 10px;
+}
+
+.avatar {
+  img {
+    float: right;
+  }
+
+  div {
+    clear: both;
+  }
+}
